EWPP-2849: Sanitize users tests data.

--- a/tests/Request/fixtures/getLinguisticRequestResponse.yaml
+++ b/tests/Request/fixtures/getLinguisticRequestResponse.yaml
@@ -32,20 +32,20 @@
             - response.getReturn().getRequestDetails().getRejectMessage() === 'reject message'
             - response.getReturn().getRequestDetails().getApplicationName() === 'application1'
             - count(response.getReturn().getRequestDetails().getContacts().getContact()) === 3
-            - response.getReturn().getRequestDetails().getContacts().getContact()[0].getFirstName() === 'Jochen'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[0].getLastName() === 'LIEKENS'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[0].getEmail() === 'Jochen.LIEKENS@ec.europa.eu'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[0].getUserId() === 'liekejo'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[0].getFirstName() === 'John'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[0].getLastName() === 'SMITH'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[0].getEmail() === 'John.SMITH@ec.europa.eu'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[0].getUserId() === 'smithjo'
             - response.getReturn().getRequestDetails().getContacts().getContact()[0].getRoleCode() === 'AUTHOR'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[1].getFirstName() === 'Jochen'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[1].getLastName() === 'LIEKENS'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[1].getEmail() === 'Jochen.LIEKENS@ec.europa.eu'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[1].getUserId() === 'liekejo'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[1].getFirstName() === 'John'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[1].getLastName() === 'SMITH'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[1].getEmail() === 'John.SMITH@ec.europa.eu'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[1].getUserId() === 'smithjo'
             - response.getReturn().getRequestDetails().getContacts().getContact()[1].getRoleCode() === 'RECIPIENT'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[2].getFirstName() === 'Jochen'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[2].getLastName() === 'LIEKENS'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[2].getEmail() === 'Jochen.LIEKENS@ec.europa.eu'
-            - response.getReturn().getRequestDetails().getContacts().getContact()[2].getUserId() === 'liekejo'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[2].getFirstName() === 'John'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[2].getLastName() === 'SMITH'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[2].getEmail() === 'John.SMITH@ec.europa.eu'
+            - response.getReturn().getRequestDetails().getContacts().getContact()[2].getUserId() === 'smithjo'
             - response.getReturn().getRequestDetails().getContacts().getContact()[2].getRoleCode() === 'REQUESTER'
             - response.getReturn().getRequestDetails().getOriginalDocument().isTrackChanges() === false
             - response.getReturn().getRequestDetails().getOriginalDocument().getFormat() === 'DOCX'
