EWPP-2845: Refactor UpdateCallbackUrlResponseTest.

--- a/tests/Request/fixtures/updateCallbackUrlResponse.yaml
+++ b/tests/Request/fixtures/updateCallbackUrlResponse.yaml
@@ -1,4 +1,11 @@
--   response: updateCallbackUrlResponse.xml
+-   response: |
+        <ns0:updateCallbackUrlResponse xmlns:ns0="http://eu.europa.ec.dgt.epoetry">
+            <success>true</success>
+            <oldCallbackUrl>https://example.com/old</oldCallbackUrl>
+            <newCallbackUrl>https://example.com/new</newCallbackUrl>
+            <application>appname</application>
+            <message>Some message</message>
+        </ns0:updateCallbackUrlResponse>
     expectations:
         assertions:
             - is_a(response, '\\OpenEuropa\\EPoetry\\Request\\Type\\UpdateCallbackUrlOut')
