--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,18 @@
     "license": "EUPL-1.2",
     "require": {
         "php": ">=8.0",
-        "ext-soap": "*",
-        "ext-dom": "*",
         "ext-curl": "*",
+        "ext-dom": "*",
+        "ext-soap": "*",
         "cweagans/composer-patches": "^1",
         "nyholm/psr7": "^1.4",
         "php-http/guzzle6-adapter": "^2.0",
+        "php-http/logger-plugin": "^1.3",
         "phpro/soap-client": "~2.0.0",
         "psr/log": "~1",
+        "symfony/serializer": "~4",
         "symfony/validator": "~4",
-        "veewee/xml": "^1.0",
-        "symfony/serializer": "~4"
+        "veewee/xml": "^1.0"
     },
     "require-dev": {
         "doctrine/annotations": "^1.13",
