--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 EPOETRY_CONSOLE_ENV=dev
 EPOETRY_CONSOLE_DEBUG=0
-EPOETRY_CONSOLE_OPENID_AUTH_CLIENT_METADATA=/var/www/html/.sink/client-metadata.json
+EPOETRY_CONSOLE_OPENID_AUTH_CLIENT_METADATA=/path/to/client-metadata.json
 EPOETRY_CONSOLE_OPENID_WELL_KNOWN_URL=https://ecas.acceptance.ec.europa.eu/cas/oauth2/.well-known/openid-configuration
 EPOETRY_CONSOLE_OPENID_SERVICE_URL=https://www.test.cc.cec/epoetry/webservices/dgtService
 EPOETRY_CONSOLE_OPENID_TOKEN_ENDPOINT=https://ecas.acceptance.ec.europa.eu/cas/oauth2/token
 EPOETRY_CONSOLE_SERVICE_URL=https://webgate.acceptance.ec.europa.eu/epoetrytst/epoetry/webservices/dgtService
-EPOETRY_CONSOLE_CLENT_CERT_SERVICE_URL=https://www.test.cc.cec/epoetry/webservices/dgtService
-EPOETRY_CONSOLE_CLENT_CERT_PATH=/var/www/html/.sink/certs/j905dyi.p12
-EPOETRY_CONSOLE_CLENT_CERT_PASSWORD=password
-EPOETRY_CONSOLE_CLENT_EU_LOGIN_BASEPATH=https://ecas.cc.cec.eu.int:7003
+EPOETRY_CONSOLE_CLIENT_CERT_SERVICE_URL=https://www.test.cc.cec/epoetry/webservices/dgtService
+EPOETRY_CONSOLE_CLIENT_CERT_PATH=/path/to/certs/j905dyi.p12
+EPOETRY_CONSOLE_CLIENT_CERT_PASSWORD=password
+EPOETRY_CONSOLE_CLIENT_EU_LOGIN_BASEPATH=https://ecas.cc.cec.eu.int:7003
 EPOETRY_CONSOLE_CALLBACK_URL=0.0.0.0:8088
