--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-curl": "*",
         "ext-dom": "*",
         "ext-soap": "*",
+        "ext-xsl": "*",
         "cweagans/composer-patches": "^1",
         "nyholm/psr7": "^1.4",
         "php-http/logger-plugin": "^1.3",
