--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php-http/logger-plugin": "^1.3",
         "phpro/soap-client": "~2.0.0",
         "psr/http-factory-implementation": "*",
-        "psr/log": "~1",
+        "psr/log": "^1 || ^3",
         "symfony/serializer": "~4",
         "symfony/validator": "~4",
         "veewee/xml": "^1.0"
