--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "nyholm/psr7": "^1.4",
         "php-http/logger-plugin": "^1.3",
         "phpro/soap-client": "~2.0.0",
-        "psr/http-factory-implementation": "*",
+        "psr/http-factory-implementation": "1",
         "psr/log": "^1 || ^3",
         "symfony/serializer": "~4",
         "symfony/validator": "~4",
