--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "psr/http-client": "^1",
         "psr/http-client-implementation": "^1",
         "psr/log": "^1 || ^3",
-        "symfony/serializer": "~4",
-        "symfony/validator": "~4",
+        "symfony/serializer": "^4.4.12 || ^5 || ^6",
+        "symfony/validator": "^4.4 || ^5 || ^6",
         "veewee/xml": "^1.0"
     },
     "require-dev": {
@@ -30,13 +30,13 @@
         "phpdocumentor/reflection-docblock": "^5",
         "phpunit/phpunit": "~9.5",
         "react/http": "^1.8",
-        "symfony/dotenv": "~4",
-        "symfony/expression-language": "~4",
-        "symfony/http-client": "~5",
-        "symfony/http-kernel": "~4",
-        "symfony/monolog-bridge": "~5",
-        "symfony/property-access": "~4",
-        "symfony/property-info": "~4"
+        "symfony/dotenv": "^4.4 || ^5 || ^6",
+        "symfony/expression-language": "^4.4 || ^5 || ^6",
+        "symfony/http-client": "^5.4 || ^6",
+        "symfony/http-kernel": "^4.4 || ^5 || ^6",
+        "symfony/monolog-bridge": "^5 || ^6",
+        "symfony/property-access": "^4.4 || ^5 || ^6",
+        "symfony/property-info": "^4.4 || ^5 || ^6"
     },
     "suggest": {
         "symfony/console": "The Symfony Console component eases the creation of command line interfaces. Require this in your project if you wish to use the ePoetry Console.",
