--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "phpro/grumphp": true,
             "cweagans/composer-patches": true,
-            "php-http/discovery": true
+            "php-http/discovery": false
         }
     },
     "autoload": {
