ci: make necessary changes to test with Symfony 4 to 6
This commit adds the necessary constraints to be able to upgrade the dependencies using the `--prefer-lowest` flag.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,14 @@ jobs:
       PHP_VERSION: ${{ matrix.php_version }}
     steps:
       - name: clone
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - run: docker-compose up -d
       - name: composer install
         run: docker-compose exec -T php composer install
+      - name: phpunit
+        run: docker-compose exec -T php ./vendor/bin/phpunit
+      - name: composer update
+        run: docker-compose exec -T php composer update --prefer-lowest
       - name: phpunit
         run: docker-compose exec -T php ./vendor/bin/phpunit
   code-sniffer:
@@ -22,7 +26,7 @@ jobs:
       PHP_VERSION: "8.0"
     steps:
       - name: clone
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - run: docker-compose up -d
       - name: composer install
         run: docker-compose exec -T php composer install
