--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,20 @@
         "psr/log": "^1 || ^3",
         "symfony/serializer": "^4.4.12 || ^5 || ^6",
         "symfony/validator": "^4.4 || ^5 || ^6",
-        "veewee/xml": "^1.0"
+        "veewee/xml": "^1.7"
     },
     "require-dev": {
-        "php-http/guzzle6-adapter": "^2.0",
+        "azjezz/psl": "^1.9.3",
         "doctrine/annotations": "^1.13",
         "monolog/monolog": "^2.8",
         "nyholm/psr7": "^1.4",
         "openeuropa/code-review": "^2.0",
         "openeuropa/task-runner": "^2@alpha",
+        "php-http/guzzle6-adapter": "^2.0",
         "php-http/mock-client": "^1.5",
+        "php-soap/psr18-transport": "^1.2",
         "phpdocumentor/reflection-docblock": "^5",
+        "phpro/grumphp": "^1.15",
         "phpunit/phpunit": "~9.5",
         "react/http": "^1.8",
         "symfony/dotenv": "^4.4 || ^5 || ^6",
