--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ jobs:
     strategy:
       matrix:
         PHP_VERSION: ["8.0"]
+        SYMFONY_VERSION: ["4", "5", "6"]
     env:
       PHP_VERSION: ${{ matrix.php_version }}
     steps:
@@ -13,11 +14,11 @@ jobs:
         uses: actions/checkout@v3
       - run: docker-compose up -d
       - name: composer install
-        run: docker-compose exec -T php composer install
-      - name: phpunit
-        run: docker-compose exec -T php ./vendor/bin/phpunit
-      - name: composer update
-        run: docker-compose exec -T php composer update --prefer-lowest
+        run: |
+          docker-compose exec -u root -T php chmod 777 composer.json
+          docker-compose exec -u root -T php composer require symfony/http-kernel:^${{ matrix.symfony_version }}
+          docker-compose exec -u root -T php chmod 777 vendor/composer/*
+          docker-compose exec -T php composer install
       - name: phpunit
         run: docker-compose exec -T php ./vendor/bin/phpunit
   code-sniffer:
