--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        PHP_VERSION: ["8.1"]
+        php_version: ["8.1"]
+        composer_command: ["composer install", "composer update --prefer-lowest"]
     env:
       PHP_VERSION: ${{ matrix.php_version }}
     steps:
@@ -13,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
       - run: docker-compose up -d
       - name: composer install
-        run: docker-compose exec -T php composer install
+        run: docker-compose exec -T php ${{ matrix.composer_command }}
       - name: phpunit
         run: docker-compose exec -T php ./vendor/bin/phpunit
   code-sniffer:
