--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
         "ext-soap": "*",
         "ext-xsl": "*",
         "cweagans/composer-patches": "^1",
-        "php-http/logger-plugin": "^1.3",
+        "php-http/logger-plugin": "^1",
+        "php-http/message": "~1.13",
         "phpro/soap-client": "~2.4",
         "psr/http-client": "^1",
         "psr/http-client-implementation": "^1",
         "psr/log": "^3",
-        "symfony/serializer": "~6",
-        "symfony/validator": "~6",
+        "symfony/serializer": "~5.5 || ~6",
+        "symfony/validator": "~5.5 || ~6",
         "veewee/xml": "^2.0"
     },
     "require-dev": {
@@ -31,13 +32,13 @@
         "phpdocumentor/reflection-docblock": "^5",
         "phpunit/phpunit": "~9.5",
         "react/http": "^1.8",
-        "symfony/dotenv": "~6",
-        "symfony/expression-language": "~6",
-        "symfony/http-client": "~6",
-        "symfony/http-kernel": "~6",
-        "symfony/monolog-bridge": "~6",
-        "symfony/property-access": "~6",
-        "symfony/property-info": "~6"
+        "symfony/dotenv": "~5.5 || ~6",
+        "symfony/expression-language": "~5.5 || ~6",
+        "symfony/http-client": "~5.5 || ~6",
+        "symfony/http-kernel": "~5.5 || ~6",
+        "symfony/monolog-bridge": "~5.5 || ~6",
+        "symfony/property-access": "~5.5 || ~6",
+        "symfony/property-info": "~5.5 || ~6"
     },
     "suggest": {
         "symfony/console": "The Symfony Console component eases the creation of command line interfaces. Require this in your project if you wish to use the ePoetry Console.",
