chore: add constraint on `azjezz/psl`
This line should removed when support for PHP 8.0 will be removed.

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-dom": "*",
         "ext-soap": "*",
         "ext-xsl": "*",
+        "azjezz/psl": "^1.9.3 || ^2.4",
         "cweagans/composer-patches": "^1",
         "php-http/logger-plugin": "^1",
         "php-http/message": "~1.13",
