--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "cweagans/composer-patches": "^1",
         "php-http/logger-plugin": "^1",
         "php-http/message": "~1.13",
+        "php-soap/psr18-transport": "^1.2.1",
         "phpro/soap-client": "^2.2 || ^2.4",
         "psr/http-client": "^1",
         "psr/http-client-implementation": "^1",
