--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
         "monolog/monolog": "^2.8",
         "nyholm/psr7": "^1.4",
         "openeuropa/code-review": "^2.0",
-        "openeuropa/task-runner": "^2@alpha",
+        "openeuropa/task-runner": "^2",
         "php-http/guzzle7-adapter": "~1",
         "php-http/mock-client": "^1.5",
         "phpdocumentor/reflection-docblock": "^5",
-        "phpunit/phpunit": "~9.5",
+        "phpunit/phpunit": "~9.6",
         "react/http": "^1.8",
         "symfony/dotenv": "~5.4 || ~6",
         "symfony/expression-language": "~5.4 || ~6",
