--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -3,6 +3,7 @@ commands:
     - "./vendor/bin/run generate:request"
     - "./vendor/bin/run generate:notification"
     - "./vendor/bin/run generate:authentication"
+    - "./vendor/bin/run generate:ticket-validation"
 
   generate:request:
     - { task: "remove", file: "src/Request/Type" }
@@ -22,3 +23,9 @@ commands:
     - "./vendor/bin/soap-client generate:types --config=$(pwd)/config/soap-client-authentication.php"
     - "./vendor/bin/soap-client generate:classmap --config=$(pwd)/config/soap-client-authentication.php"
     - "./vendor/bin/soap-client generate:client --config=$(pwd)/config/soap-client-authentication.php"
+
+  generate:ticket-validation:
+    - { task: "remove", file: "src/TicketValidation/Type" }
+    - "./vendor/bin/soap-client generate:types --config=$(pwd)/config/soap-client-ticket-validation.php"
+    - "./vendor/bin/soap-client generate:classmap --config=$(pwd)/config/soap-client-ticket-validation.php"
+    - "./vendor/bin/soap-client generate:client --config=$(pwd)/config/soap-client-ticket-validation.php"
