--- a/config/console/services.yml
+++ b/config/console/services.yml
@@ -14,6 +14,7 @@ services:
   Symfony\Component\EventDispatcher\EventDispatcherInterface: "@event_dispatcher"
 #  OpenEuropa\EPoetry\Authentication\AuthenticationInterface: "@openid_authentication"
   OpenEuropa\EPoetry\Authentication\AuthenticationInterface: "@client_cert_authentication"
+  OpenEuropa\EPoetry\TicketValidation\TicketValidationInterface: "@eu_login_ticket_validation"
 
   OpenEuropa\EPoetry\:
     resource: '../../src'
@@ -59,5 +60,12 @@ services:
       $serviceUrl: "%env(string:EPOETRY_CONSOLE_CLIENT_CERT_SERVICE_URL)%"
       $certFilepath: "%env(string:EPOETRY_CONSOLE_CLIENT_CERT_PATH)%"
       $certPassword: "%env(string:EPOETRY_CONSOLE_CLIENT_CERT_PASSWORD)%"
+      $euLoginBasePath: "%env(string:EPOETRY_CONSOLE_CLIENT_EU_LOGIN_BASEPATH)%"
+      $logger: "@logger"
+
+  eu_login_ticket_validation:
+    class: \OpenEuropa\EPoetry\TicketValidation\EuLogin\EuLoginTicketValidation
+    arguments:
+      $serviceUrl: "%env(string:EPOETRY_CONSOLE_CLIENT_CERT_SERVICE_URL)%"
       $euLoginBasePath: "%env(string:EPOETRY_CONSOLE_CLIENT_EU_LOGIN_BASEPATH)%"
       $logger: "@logger"
