EWPP-3113: Use simple HTTP GET request to validate ticket.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "php-http/logger-plugin": "^1.3",
         "phpro/soap-client": "~2.0.0",
         "psr/http-client": "^1",
-        "psr/http-client-implementation": "^1",
+        "psr/http-client-implementation": "*",
+        "psr/http-factory": "^1",
+        "psr/http-factory-implementation": "*",
         "psr/log": "^1 || ^3",
         "symfony/serializer": "~4",
         "symfony/validator": "~4",
