EWPP-3113: Integrate ticket validation in notification server factory.

--- a/config/console/services.yml
+++ b/config/console/services.yml
@@ -73,7 +73,8 @@ services:
     class: \OpenEuropa\EPoetry\TicketValidation\EuLogin\EuLoginTicketValidation
     arguments:
       $serviceUrl: "%env(string:EPOETRY_CONSOLE_CLIENT_CERT_SERVICE_URL)%"
-      $euLoginBasePath: "%env(string:EPOETRY_CONSOLE_CLIENT_EU_LOGIN_BASEPATH)%"
+      $euLoginBasePath: "%env(string:EPOETRY_CONSOLE_CLIENT_TICKET_VALIDATION_EU_LOGIN_BASEPATH)%"
+      $jobAccount: "%env(string:EPOETRY_CONSOLE_CLIENT_TICKET_VALIDATION_JOB_ACCOUNT)%"
       $requestFactory: "@http_request_factory"
       $httpClient: "@http_client"
       $logger: "@logger"
