--- a/.env
+++ b/.env
@@ -9,4 +9,6 @@ EPOETRY_CONSOLE_CLIENT_CERT_SERVICE_URL=https://www.test.cc.cec/epoetry/webservi
 EPOETRY_CONSOLE_CLIENT_CERT_PATH=/path/to/certs/j905dyi.p12
 EPOETRY_CONSOLE_CLIENT_CERT_PASSWORD=password
 EPOETRY_CONSOLE_CLIENT_EU_LOGIN_BASEPATH=https://ecas.cc.cec.eu.int:7003
+EPOETRY_CONSOLE_CLIENT_TICKET_VALIDATION_EU_LOGIN_BASEPATH=https://ecas.ec.europa.eu
+EPOETRY_CONSOLE_CLIENT_TICKET_VALIDATION_JOB_ACCOUNT=abc
 EPOETRY_CONSOLE_CALLBACK_URL=0.0.0.0:8088
