--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "psr/http-client-implementation": "*",
         "psr/http-factory": "^1",
         "psr/http-factory-implementation": "*",
-        "psr/log": "^1 || ^3",
+        "psr/log": "^1 || ^2 || ^3",
         "symfony/serializer": "~4",
         "symfony/validator": "~4",
         "veewee/xml": "^1.0"
