EWPP-3477: Enforce php version to >=8.1.21.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: "2"
 services:
   php:
-    image: wodby/php:8.1-dev
+    image: wodby/php:8.1
     environment:
       # PHP_XDEBUG: 1 # Uncomment to enable XDebug.
       PHP_FPM_USER: wodby
       PHP_FPM_GROUP: wodby
+      PHP_XDEBUG_LOG_LEVEL: 0 # the default is 7 and is very noisy.
       PHP_OPCACHE_PRELOAD_USER: wodby
       PHP_XDEBUG_START_WITH_REQUEST: "yes"
       PHP_XDEBUG_DEFAULT_ENABLE: 1
