--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php_version: ["8.1"]
+        php_version: ["8.1", "8.2"]
         composer_command: ["composer install", "composer update --prefer-lowest"]
     env:
       PHP_VERSION: ${{ matrix.php_version }}
@@ -19,8 +19,11 @@ jobs:
         run: docker-compose exec -T php ./vendor/bin/phpunit
   code-sniffer:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php_version: ["8.1", "8.2"]
     env:
-      PHP_VERSION: "8.1"
+      PHP_VERSION: ${{ matrix.php_version }}
     steps:
       - name: clone
         uses: actions/checkout@v2
